--- a/style.css
+++ b/style.css
@@ -108,8 +108,7 @@ form .find
 .find i
 {
     background-color: gray;
-    height: 40px;
-    width: 40px; 
+    padding: 0 15px 0 16px ;
     line-height: 40px;
     text-align: center;
     border-radius: 10px 0px 0px 10px;
@@ -235,10 +234,14 @@ a
     display: flex;
     flex-direction: column;
     width: 65%;
-    height: 632px;
     background-color: #F2F2F2;
     padding: 30px 14px;
     border-radius: 10px;
+}
+
+.hebergement h2
+{
+    margin-left: 8px;
 }
 
 .hebergement figcaption
@@ -248,7 +251,7 @@ a
 
 .hebergement a
 {
-margin: 2% 0;
+margin: 2% 6px;
 background-color: white;
 border-radius: 10px; 
 padding: 4px;
@@ -280,7 +283,7 @@ box-shadow: 0 5px 10px silver;
 
 .populaires figcaption p
 {
-margin-bottom: 40px;
+margin-bottom: 52px;
 }
 
 .locations
@@ -302,7 +305,7 @@ margin-bottom: 40px;
  border-radius: 10px;
  width: 32%;
  margin-left: 30px;
- height: 632px;
+ padding: 0 59px;
 }
 .populaires a
 {
@@ -327,10 +330,9 @@ margin-bottom: 40px;
 {
  display: flex;
  padding: 6px;
- margin: 32px 22px 16px 50px;
+ margin-bottom: 9px;
  border-radius: 10px;
  background-color: white;
- width: 79%;
  height: 23%;
  text-align: left;
  margin-top: 1px;
@@ -579,6 +581,7 @@ h3
         margin: 22px auto;
         width: 90%;
         height: 700px;
+        padding: 30px 0;
     }
 
     .hebergement a 
@@ -632,11 +635,12 @@ h3
     {
         width: 90%;
         margin: 22px auto;
+        padding: 0 151px;
     }
 
     .populaires h2
     {
-        margin-left: 95px;
+        margin-left: 113px;
     }
 
     .populaires a h2
@@ -647,13 +651,6 @@ h3
     #fleche
     {
         margin-right: 124px;
-    }
-
-    .populaires figure
-    {
-        width: 60%;
-        height: 23%;
-        margin: 17px 0 0 133px;
     }
 
     .populaires img
@@ -872,14 +869,14 @@ h3
     .populaires
     {
         margin-bottom: 21px;
-        padding-bottom: 15px;
+        padding-bottom:  0 10px 15px 10px;
         width: 100%;
         border-radius: 0;
     }
 
     .populaires h2
     {
-        margin: 0;
+        margin-left: 7px;
     }
 
     #fleche
@@ -887,16 +884,10 @@ h3
         margin: 0;
     }
 
-    .populaires figure
-    {
-        margin: 0 0 0 28px;
-        width: 87%;
-        height: 26%;
-    }
     
     .populaires img
     {
-        height: 100%;
+        height: 141px;
         margin-right: 19px;
     }
 
@@ -940,7 +931,7 @@ h3
 
     .hebergement h2
     {
-        margin-left: 10px;
+        margin-left: 32px;
     }
 
     .hebergement img   
